--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,54 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <ImageView
-        android:src="@mipmap/icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerInParent="true"
-        android:id="@+id/icon_image"
-        android:visibility="visible"/>
-
-    <LinearLayout
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container"
+        android:layout_above="@id/bottom"/>
+<com.google.android.material.appbar.AppBarLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/bottom"
+    android:layout_alignParentBottom="true">
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:padding="10dp"
-        android:id="@+id/linear_layout">
-
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:src="@mipmap/logo" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/button_background"
-            android:text="Login"
-            android:textAllCaps="false"
-            android:id="@+id/login"/>
-
-
-        <androidx.legacy.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="10dp"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/button_background"
-            android:text="REGISTER"
-            android:textAllCaps="false"
-            android:id="@+id/register"/>
+        android:id="@+id/bottom_navigation"
+        app:itemIconTint="@color/selector"
+        app:labelVisibilityMode="unlabeled"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/bottom_menu"/>
 
 
 
 
-    </LinearLayout>
 
+
+</com.google.android.material.appbar.AppBarLayout>
 </RelativeLayout>
-
